--- a/GST/Web.config
+++ b/GST/Web.config
@@ -18,6 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="mongo" value="mongodb://pathllk:indian@ds039404.mlab.com:39404/appharbor_gxm5g8zh" />
+    <add key="RCON" value="0" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
