--- a/GST/Web.config
+++ b/GST/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -18,7 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="mongo" value="mongodb://pathllk:indian@ds039404.mlab.com:39404/appharbor_gxm5g8zh" />
-    <add key="RCON" value="0" />
+    <add key="RCON" value="7" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
